--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1670,6 +1670,117 @@
     </div>
   </details>
 </section>
+                <section aria-labelledby="bolum-sosyal-ekonomik">
+  <h3 id="bolum-sosyal-ekonomik" class="subsection-title text-2xl font-bold mt-12 mb-4">ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler</h3>
+  <p class="text-slate-600 mb-6" style="text-align: justify;">
+    Bu bölüm, bireyin sadece siyasal değil, aynı zamanda <strong>sosyal ve ekonomik alanlarda korunmasını</strong> sağlayan hakları düzenler. Ailenin devlet tarafından korunması, çocuk hakları, eğitim hakkı gibi temel toplumsal yapı taşları bu maddelerde yer alır. Özellikle <strong>Madde 42</strong>, GYS’de hem bilgi hem yorum sorularının yoğun çıktığı bir madde olup, "Atatürk ilkeleri", "öğretim hürriyeti", "zorunlu eğitim", "özel okullar" gibi kavramlar sıkça sorgulanır.
+  </p>
+
+  <!-- Madde 41 -->
+  <details id="madde-41" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 41 – Ailenin Korunması ve Çocuk Hakları
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Aile, Türk toplumunun temelidir ve eşler arasında eşitliğe dayanır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, ailenin huzur ve refahı ile özellikle ananın ve çocukların korunması ve aile planlamasının öğretimi ile uygulanmasını sağlamak için gerekli tedbirleri alır, teşkilatı kurar.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Her çocuk, korunma ve bakımdan yararlanma, yüksek yararına açıkça aykırı olmadıkça, ana ve babasıyla kişisel ve doğrudan ilişki kurma ve sürdürme hakkına sahiptir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, her türlü istismara ve şiddete karşı çocukları koruyucu tedbirleri alır.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Aile, Devletin Temel Birimidir</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, aileyi sadece bir sosyal kurum değil, <strong>devletin temel yapı taşı</strong> olarak tanımlar. "Aile, Türk toplumunun temelidir" ifadesi, Anayasa'nın sosyal vizyonunun merkezindedir.</p>
+        <p style="text-align: justify;" class="text-sm mt-2">Devletin aile, anne ve çocuklara karşı <strong>koruyucu ve destekleyici görevi</strong> vardır. Bu görev, pasif değil, <strong>aktif tedbir alma ve teşkilat kurma</strong> şeklinde ifade edilmiştir.</p>
+      </div>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Çocuk Hakları: İki Temel Güvence</h6>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>Kişisel İlişki Hakkı:</strong> Çocuk, ana-babasıyla doğrudan ilişki kurma hakkına sahiptir. Bu, velayet veya nafaka gibi hukuki sonuçlardan bağımsızdır. Ancak "yüksek yararına açıkça aykırı" ise bu hak sınırlanabilir.</li>
+          <li><strong>Korunma Hakkı:</strong> Devlet, çocukları her türlü istismar ve şiddetten korumakla yükümlüdür. Bu, sadece fiziksel değil, duygusal ve cinsel istismarı da kapsar.</li>
+        </ol>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hangisi Anayasa’da Yoktur?</h6>
+        <p style="text-align: justify;" class="text-sm">GYS’de “Aşağıdakilerden hangisi Madde 41’de yer almaz?” tarzı sorular sık gelir. Doğru cevap genellikle:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>“Aile planlaması zorunludur.”</strong> → Anayasa’da <strong>zorunluluk</strong> yoktur, sadece <strong>öğretimi ve uygulanması</strong> için tedbir alınır.</li>
+          <li><strong>“Eşlerin mali durumu eşit olmalıdır.”</strong> → Eşitlik, <strong>hukuki statü</strong> açısından geçerlidir, mali eşitlik Anayasa’yla düzenlenmez.</li>
+        </ul>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 42 -->
+  <details id="madde-42" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 42 – Eğitim ve Öğrenim Hakkı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Kimse, eğitim ve öğrenim hakkından yoksun bırakılamaz.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Öğrenim hakkının kapsamı kanunla tespit edilir ve düzenlenir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Eğitim ve öğretim, Atatürk ilkeleri ve inkılapları doğrultusunda, çağdaş bilim ve eğitim esaslarına göre, Devletin gözetim ve denetimi altında yapılır. Bu esaslara aykırı eğitim ve öğretim yerleri açılamaz.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Eğitim ve öğretim hürriyeti, Anayasaya sadakat borcunu ortadan kaldırmaz.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        İlköğretim kız ve erkek bütün vatandaşlar için zorunludur ve Devlet okullarında parasızdır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Özel ilk ve orta dereceli okulların bağlı olduğu esaslar, Devlet okulları ile erişilmek istenen seviyeye uygun olarak, kanunla düzenlenir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, maddi imkanlardan yoksun başarılı öğrencilerin, öğrenimlerini sürdürebilmeleri amacı ile burslar ve başka yollarla gerekli yardımları yapar. Devlet, durumları sebebiyle özel eğitime ihtiyacı olanları topluma yararlı kılacak tedbirleri alır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Eğitim ve öğretim kurumlarında sadece eğitim, öğretim, araştırma ve inceleme ile ilgili faaliyetler yürütülür. Bu faaliyetler her ne suretle olursa olsun engellenemez.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Türkçeden başka hiçbir dil, eğitim ve öğretim kurumlarında Türk vatandaşlarına ana dilleri olarak okutulamaz ve öğretilemez.</strong> Eğitim ve öğretim kurumlarında okutulacak yabancı diller ile yabancı dille eğitim ve öğretim yapan okulların tabi olacağı esaslar kanunla düzenlenir. Milletlerarası andlaşma hükümleri saklıdır.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Eğitim Hakkı – Devletin Gözetiminde</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, eğitim hakkını <strong>hem bir hürriyet</strong> hem de <strong>devlet kontrolü</strong> altında bir alan olarak düzenler. "Kimse yoksun bırakılamaz" ifadesi, bu hakkın <strong>olumlu yükümlülük</strong> doğurduğunu gösterir: Devlet, bu hakkı sağlamak için <strong>aktif tedbir almak zorundadır</strong>.</p>
+        <p style="text-align: justify;" class="text-sm mt-2">Özellikle dikkat edilmesi gereken: Eğitim <strong>Atatürk ilkeleri ve çağdaş bilime</strong> dayanmak zorundadır. Bu, dini veya ideolojik içerikli eğitimlerin <strong>yasaklanmasını</strong> sağlar.</p>
+      </div>
+
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İptal Edilen Fıkra: Dikkat!
+        </h6>
+        <p style="text-align: justify;" class="text-sm">Metinde yer alan <strong>"(Ek fıkra: 9/2/2008-5735/2 md.; İptal: Anayasa Mahkemesinin 5/6/2008 tarihli ve E.: 2008/16, K.: 2008/116 sayılı Kararı ile.)"</strong> ifadesi, o fıkranın artık yürürlükte olmadığını gösterir. Sınavda bu fıkra sorulmaz.</p>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Madde 42’deki 6 Banko Soru</h6>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>“Eğitim hakkı yoktur” diyen kimseye ne cevap verilir?</strong> → “<strong>Kimse eğitim hakkından yoksun bırakılamaz.</strong>”</li>
+          <li><strong>Zorunlu ve parasız olan eğitim hangisidir?</strong> → <strong>İlköğretim</strong> (ortaöğretim değil).</li>
+          <li><strong>Özel okullar nasıl düzenlenir?</strong> → <strong>Kanunla</strong> ve <strong>devlet okulları seviyesine uygun</strong> olarak.</li>
+          <li><strong>Eğitimde engelleme yasak mı?</strong> → Evet, <strong>“her ne suretle olursa olsun engellenemez”</strong>.</li>
+          <li><strong>Yabancı dil ana dil olarak okutulabilir mi?</strong> → Hayır, <strong>Türkçeden başka hiçbir dil ana dil olarak okutulamaz</strong>.</li>
+          <li><strong>Atatürk ilkelerine aykırı eğitim yapılabilir mi?</strong> → Hayır, <strong>bu tür okullar açılamaz</strong>.</li>
+        </ol>
+      </div>
+    </div>
+  </details>
+</section>
+
                 
             </article>
         </div>
