--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1760,12 +1760,6 @@
         <p style="text-align: justify;" class="text-sm mt-2">Özellikle dikkat edilmesi gereken: Eğitim <strong>Atatürk ilkeleri ve çağdaş bilime</strong> dayanmak zorundadır. Bu, dini veya ideolojik içerikli eğitimlerin <strong>yasaklanmasını</strong> sağlar.</p>
       </div>
 
-      <div class="warning-box mt-4">
-        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İptal Edilen Fıkra: Dikkat!
-        </h6>
-        <p style="text-align: justify;" class="text-sm">Metinde yer alan <strong>"(Ek fıkra: 9/2/2008-5735/2 md.; İptal: Anayasa Mahkemesinin 5/6/2008 tarihli ve E.: 2008/16, K.: 2008/116 sayılı Kararı ile.)"</strong> ifadesi, o fıkranın artık yürürlükte olmadığını gösterir. Sınavda bu fıkra sorulmaz.</p>
-      </div>
-
       <div class="strategy-box mt-4">
         <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Madde 42’deki 6 Banko Soru</h6>
         <ol class="list-decimal pl-5 space-y-1 text-sm">
@@ -1780,7 +1774,137 @@
     </div>
   </details>
 </section>
+<section aria-labelledby="bolum-sosyal-ekonomik-2">
+  <h3 id="bolum-sosyal-ekonomik-2" class="subsection-title text-2xl font-bold mt-12 mb-4">ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler (Devam)</h3>
+  <p class="text-slate-600 mb-6" style="text-align: justify;">
+    Bu bölüm, bireyin ekonomik yaşamını etkileyen doğal kaynakların kullanımını, toprak mülkiyetinin sosyal işlevini ve tarım-hayvancılık sektörünün korunmasını düzenler. <strong>Madde 43, 44 ve 45</strong>, Devletin "sosyal devlet" ilkesi doğrultusunda <strong>kamu yararını</strong> bireysel çıkarların önüne koyduğunu gösterir. Bu maddeler, özellikle <strong>mülkiyet hakkının sınırları</strong>, <strong>devletin sosyal görevleri</strong> ve <strong>tarımsal üretimin korunması</strong> açısından sınavlarda sıkça yorum sorularına konu olur.
+  </p>
 
+  <!-- Madde 43 -->
+  <details id="madde-43" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 43 – Kıyılardan Yararlanma
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Kıyılar, Devletin hüküm ve tasarrufu altındadır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Deniz, göl ve akarsu kıyılarıyla, deniz ve göllerin kıyılarını çevreleyen sahil şeritlerinden yararlanmada öncelikle <strong>kamu yararı</strong> gözetilir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Kıyılarla sahil şeritlerinin, kullanılış amaçlarına göre derinliği ve kişilerin bu yerlerden yararlanma imkan ve şartları kanunla düzenlenir.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Sahil, Hepimizin Ortak Malıdır</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, Türkiye'nin en değerli doğal kaynaklarından biri olan <strong>kıyıların</strong> hukuki statüsünü belirler. Üç temel ilke içerir:</p>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>Mülkiyet Devlete Aittir:</strong> Hiç kimse bir kıyıyı özel mülk ilan edemez. Tüm kıyılar, halk adına <strong>Devletin tasarrufunda</strong> yer alır.</li>
+          <li><strong>Kamu Yararı Önceliklidir:</strong> Bir otel, villa veya özel tesisin yararı, halkın serbestçe yararlanma hakkının önüne geçemez.</li>
+          <li><strong>Kanunla Düzenlenir:</strong> Sahil şeridinin genişliği, kimin nasıl yararlanacağı gibi tüm detaylar, <strong>idari keyfe değil, TBMM'nin çıkardığı kanuna</strong> bağlıdır.</li>
+        </ol>
+      </div>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Analoji: Halk Parkı Modeli</h6>
+        <p style="text-align: justify;" class="text-sm">Bir sahili, bir şehrin en güzel halk parkı gibi düşünün:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>Sahibi:</strong> Tek bir kişi değil, tüm halk (Devletin hükmü altında).</li>
+          <li><strong>Öncelik:</strong> Parkta öncelik halkın gezip dinlenmesidir.</li>
+          <li><strong>Kurallar:</strong> Kimin büfe açabileceği, hangi saatlerde açık olacağı belediye meclisinin kararlarıyla (kanunla) belirlenir.</li>
+        </ul>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hangisi Anayasa’da Yoktur?</h6>
+        <p style="text-align: justify;" class="text-sm">GYS’de “Aşağıdakilerden hangisi Madde 43’ün düzenlediği konulardan biridir?” tarzı sorular gelir. Doğru seçenekler:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li>Kıyıların Devletin tasarrufunda olması</li>
+          <li>Kamu yararının öncelikli olması</li>
+          <li>Kullanım şartlarının kanunla düzenlenmesi</li>
+        </ul>
+        <p class="text-sm mt-2"><strong>Çeldirici:</strong> “Kıyılar özel mülk olabilir.” → Yanlıştır.</p>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 44 -->
+  <details id="madde-44" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 44 – Toprak Mülkiyeti
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, toprağın verimli olarak işletilmesini korumak ve geliştirmek, erozyonla kaybedilmesini önlemek ve topraksız olan veya yeter toprağı bulunmayan çiftçilikle uğraşan köylüye toprak sağlamak amacıyla gerekli tedbirleri alır. Kanun, bu amaçla, değişik tarım bölgeleri ve çeşitlerine göre toprağın genişliğini tespit edebilir. Topraksız olan veya yeter toprağı bulunmayan çiftçiye toprak sağlanması, üretimin düşürülmesi, ormanların küçülmesi ve diğer toprak ve yeraltı servetlerinin azalması sonucunu doğuramaz.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Bu amaçla dağıtılan topraklar <strong>bölünemez</strong>, <strong>miras hükümleri dışında başkalarına devredilemez</strong> ve ancak dağıtılan çiftçilerle mirasçıları tarafından işletilebilir. Bu şartların kaybı halinde, dağıtılan toprağın Devletçe geri alınmasına ilişkin esaslar kanunla düzenlenir.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Toprak, Sosyal Görevi Olan Bir Hak</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, Devletin tarım topraklarına yönelik <strong>sosyal görevlerini</strong> ve bu görevler çerçevesinde mülkiyet hakkına nasıl müdahale edebileceğini düzenler. Devlet, bu maddeyle bir nevi "toprak reformu" yapma görevini üstlenir.</p>
+        <p style="text-align: justify;" class="text-sm mt-2">Dağıtılan topraklar, normal mülk gibi <strong>özgürce satılabilir, kiralanabilir veya bölünebilir</strong> değildir. Bunlar, <strong>sosyal devlet ilkesi</strong> doğrultusunda, sadece üreticiye fayda sağlayacak şekilde sınırlandırılmıştır.</p>
+      </div>
+
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Kritik Sınırlandırma: Dağıtılan Topraklarda 3 Yasak</h6>
+        <p style="text-align: justify;" class="text-sm mb-2">Devletin dağıttığı topraklara ilişkin üç temel kısıtlama vardır:</p>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>Bölünemez.</strong></li>
+          <li><strong>Miras dışında başkasına devredilemez.</strong> (Satılamaz, bağışlanamaz, rehin konulamaz.)</li>
+          <li><strong>Sadece dağıtılan çiftçi veya mirasçıları tarafından işletilebilir.</strong> (Kiraya verilemez.)</li>
+        </ol>
+        <p class="text-sm mt-2"><strong>İstisna:</strong> Miras, devir yasağının tek istisnasıdır.</p>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: 3 Sınırlandırma + 1 Geri Alma</h6>
+        <p style="text-align: justify;" class="text-sm">GYS’de “Aşağıdakilerden hangisi devlet tarafından dağıtılan topraklara ilişkin bir yasak değildir?” tarzı sorular sık gelir. Doğru cevap genellikle:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>“Miras yoluyla devredilemez.”</strong> → Yanlıştır. Çünkü miras <strong>yasak değil, izindir</strong>.</li>
+        </ul>
+        <p class="text-sm mt-2">Ayrıca, bu topraklar için <strong>geri alma hakkı</strong> vardır. Şartlar ihlal edilirse, Devlet kanunla belirlenen esaslara göre toprağı geri alabilir.</p>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 45 -->
+  <details id="madde-45" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 45 – Tarım, Hayvancılık ve Çalışanların Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Devlet, tarım arazileri ile çayır ve mer'aların amaç dışı kullanılmasını ve tahribini önlemek, tarımsal üretim planlaması ilkelerine uygun olarak bitkisel ve hayvansal üretimi artırmak maksadıyla, tarım ve hayvancılıkla uğraşanların işletme araç ve gereçlerinin ve diğer girdilerinin sağlanmasını kolaylaştırır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, bitkisel ve hayvansal ürünlerin değerlendirilmesi ve gerçek değerlerinin üreticinin eline geçmesi için gereken tedbirleri alır.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Devlet, Üreticiyi Korur</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, devlete tarım ve hayvancılık sektörünü <strong>koruma, destekleme ve geliştirme</strong> görevi verir. Madde 44 toprağın mülkiyetine odaklanırken, bu madde doğrudan <strong>üretim sürecine ve üreticiye</strong> odaklanır.</p>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Hafıza Tekniği: KORU - DESTEKLE - DEĞERLENDİR</h6>
+        <p style="text-align: justify;" class="text-sm">Bu maddeyi ezberlemek yerine, üç temel fiil köküyle hatırlayın:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>KORU:</strong> Tarım arazilerinin amaç dışı kullanılması (sanayi tesisi, gecekondu) ve tahribi önlenir.</li>
+          <li><strong>DESTEKLE:</strong> Traktör, tohum, gübre gibi girdilerin alınması kolaylaştırılır.</li>
+          <li><strong>DEĞERLENDİR:</strong> Ürünlerin aracılar tarafından ucuza kapatılması önlenir; gerçek değer üreticinin eline geçer.</li>
+        </ul>
+      </div>
+
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Uyarı: "Gerçek Değer" Kavramı</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, üreticinin ürününü <strong>uygun fiyatla</strong> satmasını güvence altına alır. Ancak bu, devletin her ürün için fiyat belirlemesi anlamına gelmez. Bu görev, kanunla düzenlenecek tedbirler çerçevesinde yerine getirilir.</p>
+      </div>
+    </div>
+  </details>
+</section>
                 
             </article>
         </div>
