--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1975,6 +1975,138 @@
     </div>
   </details>
 </section>
+                <section aria-labelledby="ucuncu-kisim">
+  <h2 id="ucuncu-kisim" class="section-title mt-16 mb-6">ÜÇÜNCÜ KISIM: Sosyal ve Ekonomik Haklar ve Ödevler</h2>
+
+  <!-- ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler -->
+  <section aria-labelledby="bolum-sosyal-ekonomik">
+    <h3 id="bolum-sosyal-ekonomik" class="subsection-title text-2xl font-bold mt-12 mb-4">ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler</h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+      Bu bölüm, bireyin sadece siyasal değil, aynı zamanda sosyal ve ekonomik alanlarda korunmasını sağlayan hakları düzenler. Ailenin devlet tarafından korunması, eğitim, çalışma, mülkiyet, kamulaştırma gibi temel toplumsal yapı taşları bu maddelerde yer alır. Özellikle <strong>Madde 46 ve 47</strong>, devletin ekonomik müdahale yetkilerinin sınırlarını ve kamu yararının özel mülkiyet üzerindeki üstünlüğünü anayasal zemine oturtur.
+    </p>
+
+    <!-- Madde 46 -->
+    <details id="madde-46" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 46 – Kamulaştırma
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Devlet ve kamu tüzel kişileri; <strong>kamu yararının gerektirdiği hallerde</strong>, <strong>gerçek karşılıklarını peşin ödemek şartıyla</strong>, özel mülkiyette bulunan taşınmaz malların tamamını veya bir kısmını, kanunla gösterilen esas ve usullere göre, kamulaştırmaya ve bunlar üzerinde idarî irtifaklar kurmaya yetkilidir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Kamulaştırma bedeli ile kesin hükme bağlanan artırım bedeli <strong>nakden ve peşin olarak ödenir</strong>. Ancak, tarım reformunun uygulanması, büyük enerji ve sulama projeleri ile iskân projelerinin gerçekleştirilmesi, yeni ormanların yetiştirilmesi, kıyıların korunması ve turizm amacıyla kamulaştırılan toprakların bedellerinin ödenme şekli kanunla gösterilir. Kanunun taksitle ödemeyi öngörebileceği bu hallerde, <strong>taksitlendirme süresi beş yılı aşamaz</strong>; bu takdirde taksitler eşit olarak ödenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Kamulaştırılan topraktan, o toprağı doğrudan doğruya işleten küçük çiftçiye ait olanlarının bedeli, <strong>her halde peşin ödenir</strong>.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          İkinci fıkrada öngörülen taksitlendirmelerde ve herhangi bir sebeple ödenmemiş kamulaştırma bedellerinde <strong>kamu alacakları için öngörülen en yüksek faiz uygulanır</strong>.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Kamulaştırma – Devletin Ekonomik Müdahalesi
+          </h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, devletin özel mülkiyet üzerindeki üstünlüğünü, ancak katı koşullar altında kullanabileceğini düzenler. Kamulaştırma, <strong>kamu yararı</strong> için yapılan bir zorunluluk tedbiridir (yol, hastane, metro). Ancak bu yetki keyfi kullanılamaz:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Gerçek karşılık</strong> ödenecek.</li>
+            <li><strong>Peşin ödeme</strong> kuraldır.</li>
+            <li><strong>Kanunla belirlenen usul</strong> takip edilecek.</li>
+          </ul>
+        </div>
+
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: 4 Temel Soru – Kamulaştırma Şifresi</h6>
+          <p style="text-align: justify;" class="text-sm mb-2">Sınavda bu maddeyi analiz etmek için şu 4 soruyu sorun:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Ne alınır?</strong> → <strong>Taşınmaz mal</strong> (arsa, bina, tarla).</li>
+            <li><strong>Neden alınır?</strong> → <strong>Kamu yararı</strong> gerektirir.</li>
+            <li><strong>Nasıl alınır?</strong> → <strong>Kanunla belirlenen usul</strong> ve <strong>peşin ödeme</strong>.</li>
+            <li><strong>Ne karşılığında?</strong> → <strong>Gerçek karşılık</strong>.</li>
+          </ul>
+        </div>
+
+        <div class="warning-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İstisnalar ve Dikkat Edilmesi Gerekenler</h6>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Taksit:</strong> Sadece 7 büyük proje için: tarım reformu, enerji, sulama, iskân, orman, kıyı, turizm.</li>
+            <li><strong>Süre:</strong> Taksit süresi <strong>5 yılı aşamaz</strong>.</li>
+            <li><strong>Küçük Çiftçi:</strong> Tarlası kamulaştırılan küçük çiftçiye ödeme <strong>her halde peşindir</strong>. Bu, sosyal devlet ilkesinin bir gereğidir.</li>
+            <li><strong>Faiz:</strong> Geciken ödeme veya taksitlere <strong>kamu alacakları için en yüksek faiz</strong> uygulanır.</li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
+    <!-- Madde 47 -->
+    <details id="madde-47" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+      <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 47 – Devletleştirme ve Özelleştirme
+      </summary>
+      <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+          Kamu hizmeti niteliği taşıyan özel teşebbüsler, <strong>kamu yararının zorunlu kıldığı hallerde</strong> devletleştirilebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devletleştirme <strong>gerçek karşılığı üzerinden</strong> yapılır. Gerçek karşılığın hesaplanma tarzı ve usulleri kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devletin, kamu iktisadi teşebbüslerinin ve diğer kamu tüzelkişilerinin mülkiyetinde bulunan işletme ve varlıkların özelleştirilmesine ilişkin esas ve usuller kanunla gösterilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+          Devlet, kamu iktisadi teşebbüsleri ve diğer kamu tüzelkişileri tarafından yürütülen yatırım ve hizmetlerden hangilerinin özel hukuk sözleşmeleri ile gerçek veya tüzelkişilere yaptırılabileceği veya devredilebileceği kanunla belirlenir.
+        </blockquote>
+
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Devletleştirme vs. Özelleştirme – İki Yön
+          </h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, devletin ekonomik sektöre müdahalesinin iki yönünü düzenler:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Devletleştirme:</strong> Özel bir şirketin (elektrik, su, liman) kamu yararının <strong>zorunlu kıldığı</strong> hallerde devlet tarafından alınması. "Zorunluluk" ifadesi, bu yetkinin <strong>son çare</strong> olduğunu vurgular.</li>
+            <li><strong>Özelleştirme:</strong> Devletin KİT'lerinin (PTT, Türk Telekom) veya kamu varlıklarının satılması.</li>
+            <li><strong>Devir:</strong> Devletin bazı hizmetleri özel sektöre yaptırması (Yap-İşlet-Devret modeli).</li>
+          </ul>
+        </div>
+
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Analiz: Kamulaştırma vs. Devletleştirme</h6>
+          <table class="w-full border-collapse text-sm bg-white border border-slate-300">
+            <thead>
+              <tr class="bg-slate-100">
+                <th class="border border-slate-300 p-2 text-left">Kriter</th>
+                <th class="border border-slate-300 p-2 text-left">Kamulaştırma (Madde 46)</th>
+                <th class="border border-slate-300 p-2 text-left">Devletleştirme (Madde 47)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="border border-slate-300 p-2">Konusu</td>
+                <td class="border border-slate-300 p-2">Taşınmaz mal<br>(Arsa, bina, tarla)</td>
+                <td class="border border-slate-300 p-2">Özel teşebbüs<br>(Şirket, işletme)</td>
+              </tr>
+              <tr class="bg-slate-50">
+                <td class="border border-slate-300 p-2">Gerekçe</td>
+                <td class="border border-slate-300 p-2">Kamu yararının gerektirmesi</td>
+                <td class="border border-slate-300 p-2">Kamu yararının <strong>zorunlu</strong> kılması</td>
+              </tr>
+              <tr>
+                <td class="border border-slate-300 p-2">Ödeme</td>
+                <td class="border border-slate-300 p-2">Gerçek karşılık, <strong>peşin</strong></td>
+                <td class="border border-slate-300 p-2">Gerçek karşılık<br>(Ödeme şekli kanuna bırakılmış)</td>
+              </tr>
+              <tr class="bg-slate-50">
+                <td class="border border-slate-300 p-2">Taksit</td>
+                <td class="border border-slate-300 p-2">Var (5 yılı aşamaz)</td>
+                <td class="border border-slate-300 p-2">Anayasada belirtilmemiş</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </details>
+  </section>
+</section>
+
                 
             </article>
         </div>
